# crisscross

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: angle.rs  beam.rs  beam_iter.rs  direction.rs  grid.rs  intersections.rs  intersections_iter.rs  lib.rs  position.rs  ray.rs  ray_iter.rs  rays.rs  tile_raycaster.rs  util.rs
src/position/: mod.rs  tile_position.rs  world_coords.rs
src/test_utils/: canvas.rs  mod.rs  plot.rs
tests/: cast_beam.rs  cast_ray.rs  items.rs  last.rs  tiles_in_path.rs
tests/common/: mod.rs
